--- a/rooke/src/main/resources/templates/board/list.html
+++ b/rooke/src/main/resources/templates/board/list.html
@@ -5,12 +5,42 @@
 	</th:block>
 	
 	<th:block layout:fragment="search">
-		<form action="#" id="searchform-header" class="searchform js__toggle active pull-right">
-			<input type="search" placeholder="Search..." class="input-search">
-			<button class="mdi mdi-magnify button-search" type="submit">
-				<i class="fa fa-search" aria-hidden="true"></i>
-			</button>
-		</form>
+		<div id="adv-search" class="input-group">
+		 <input type="search" id="mainKeyword" class="form-control" onkeyup="document.getElementById('keyword').value=this.value;" placeholder="검색어를 입력하세요">
+		 <div class="input-group-btn">
+		 	<div class="btn-group" role="group">
+		 		<div class="dropdown dropdown-lg">
+		 			<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+		 				<span class="caret"></span>
+		 			</button>
+		 			<div class="dropdown-menu dropdown-menu-right" role="menu">
+		 				<!-- 검색폼 -->
+		 				<form id="searchForm" class="form-horizontal" onsubmit="return false;" autocomplete="off">
+		 					<div class="form-group">
+		 						<label for="searchType">검색 유형</label>
+		 						<select id="searchType" name="searchType" class="form-control">
+		 							<option value="">전체</option>
+		 							<option value="title">제목</option>
+		 							<option value="content">내용</option>
+		 							<option value="writer">작성자</option>
+		 						</select>
+		 					</div>
+		 					<div class="form-group">
+		 						<label for="keyword">키워드</label>
+		 						<input type="search" id="keyword" name="keyword" class="form-control" onkeyup="document.getElementById('mainKeyword').value=this.value;" placeholder="검색어를 입력하세요">
+		 					</div>
+		 					<button type="button" onclick="movePage(1);" class="btn btn-primary">
+		 						<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+		 					</button>
+		 				</form>
+		 			</div>
+		 		</div>
+		 		<button type="button" onclick="movePage(1);" class="btn btn-primary">
+		 			<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+		 		</button>
+		 	</div>
+		 </div>
+		</div>
 	</th:block>
 	
 	<th:block layout:fragment="content">
@@ -46,8 +76,26 @@
 	<th:block layout:fragment="script">
 		<script th:inline="javascript">
 			window.onload=()=>{
+				setQueryStringParams();
 				getBoardList();
 			}
+			
+			//쿼리 스트링 파라미터 셋팅
+			function setQueryStringParams(){
+				if(!location.search){
+					return false;
+				}
+				const form=document.getElementById('searchForm');
+				
+				new URLSearchParams(location.search).forEach((value, key) =>{
+					if (form[key]){
+						form[key].value=value;
+					}
+				})
+				document.getElementById('mainKeyword').value=form.keyword.value;
+			}
+			
+			
 			
 			//게시글 리스트 조회
 			function getBoardList(){
@@ -66,6 +114,8 @@
 				drawPage(pagination,search);
 			}
 			
+			
+			
 			//리스트 HTML draw
 			function drawList(list,num){
 				let html='';
@@ -73,7 +123,7 @@
 					html +=`
 					<tr>
 						<td>${obj.noticeYn===true?'공지':num--}</td>
-						<td class="text-left"><a href="/board/view.do?idx=${obj.idx}">${obj.title}</a></td>
+						<td class="text-left"><a href="javascript:void(0);" onclick="goViewPage(${obj.idx});">${obj.title}</a></td>
 						<td>${obj.writer}</td>
 						<td>${obj.insertTime}</td>
 						<td>${obj.viewCnt}</td>
@@ -81,6 +131,12 @@
 					`;
 				})
 				document.getElementById('list').innerHTML=html;
+			}
+			
+			//게시글 상세 페이지 이동
+			function goViewPage(idx){
+				const queryString=(location.search)? location.search+`&idx=${idx}`:`?idx=${idx}`;
+				location.href='/board/view.do'+queryString;
 			}
 			
 			//페이지 HTML draw
@@ -120,10 +176,13 @@
 
             // 페이지 이동
             function movePage(page) {
-                const queryParams = {
+               	const form=document.getElementById('searchForm');
+            	const queryParams = {
                     page: (page) ? page : 1,
                     recordSize: 10,
-                    pageSize: 5
+                    pageSize: 5,
+                    keyword:form.keyword.value,
+                    searchType:form.searchType.value
                 }
                 location.href = location.pathname + '?' + new URLSearchParams(queryParams).toString();
             }
