--- a/rooke/src/main/resources/templates/board/view.html
+++ b/rooke/src/main/resources/templates/board/view.html
@@ -43,8 +43,10 @@
 				</div>
 			</form>
 			<div class="btn_wrap text-center">
-				<a th:href="@{/board/list.do}" class="btn btn-default waves-effect waves-light">이전으로</a>
-				<a th:href="@{/board/write.do(idx=${rooke.idx})}" class="btn btn-primary waves-effect waves-light">수정</a>
+				<!--  <a th:href="@{/board/list.do}" class="btn btn-default waves-effect waves-light">이전으로</a>-->
+				<a href="javascript:void(0);" onclick="goListPage();" class="btn btn-default waves-effect waves-light">이전으로</a>
+				<!-- <a th:href="@{/board/write.do(idx=${rooke.idx})}" class="btn btn-primary waves-effect waves-light">수정</a>-->
+				<a href="javascript:void(0);" onclick="goWritePage();" class="btn btn-primary waves-effect waves-light">수정</a>
 				<button type="button" class="btn btn-danger waves-effect waves-light" th:onclick="deleteBoard([[${rooke.idx}]])">삭제</button>
 			</div>
 		</div>
@@ -96,18 +98,41 @@
 	<th:block layout:fragment="script">
 		<script th:inline="javascript">
 		
-		function deleteBoard(idx){
-			if(confirm(idx+"번 게시글을 정말 삭제합니까?")){
-				var uri=[[@{/board/delete.do}]];
-				var html="";
-				
-				html += '<form name="dataForm" action="'+uri+'" method="post">';
-				html += '<input type="hidden" name="idx" value="'+idx+'">';
-				html += '</form>';
-				
-				$("body").append(html);
-				document.dataForm.submit();
+		//게시글 리스트 페이지로 이동
+		function goListPage(){
+			const queryString=new URLSearchParams(location.search);
+			queryString.delete('idx');
+			location.href='/board/list.do'+'?'+queryString.toString();
+		}
+		
+		//게시글 수정 페이지로 이동
+		function goWritePage(){
+			location.href='/board/write.do'+location.search;
+		}
+		//게시글 삭제
+		function deleteBoard(){
+			const idx=[[${rooke.idx}]];
+			if(!confirm(idx+"번 게시글을 정말 삭제합니까?")){
+				return false;
 			}
+			
+			let inputHtml='';
+			
+			new URLSearchParams(location.search).forEach((value,key)=>{
+				inputHtml+=`<input type="hidden" name="${key}" value="${value}" />`;
+			})
+			
+			const formHtml=`
+				<form id="deleteForm" action="/board/delete.do" method="post">
+					${inputHtml}
+				</form>
+			`;
+			
+			const doc=new DOMParser().parseFromString(formHtml,'text/html');
+			const form=doc.body.firstChild;
+			document.body.append(form);
+			document.getElementById('deleteForm').submit();
+			
 		}
 		
 		
