--- a/rooke/src/main/resources/templates/board/fragments/body.html
+++ b/rooke/src/main/resources/templates/board/fragments/body.html
@@ -7,7 +7,9 @@
 			</div>
 		</div>
 		<!-- /.fixed-navbar -->
-
+		
+		<th:block layout:fragment="modal"></th:block>
+		
 		<div id="wrapper">
 			<div class="main-content">
 				<div class="row row-inline-block small-spacing">
