--- a/rooke/src/main/resources/templates/board/view.html
+++ b/rooke/src/main/resources/templates/board/view.html
@@ -3,6 +3,39 @@
 	<th:block layout:fragment="title">
 		<title>상세페이지</title>
 	</th:block>
+	
+	<th:block layout:fragment="modal">
+		<div id="commentModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="commentModalLabel" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				
+				<div class="modal-body">
+					<form>
+						<div class="form-group">
+							<label for="modalWriter" class="col-form-label">작성자</label>
+							<input type="text" id="modalWriter" class="form-control" placeholder="작성자를 입력하세요">
+						</div>
+						<div class="form-group">
+							<label for="modalContent" class="col-form-label">내용</label>
+							<textarea id="modalContent" class="form-control" placeholder="내용을 입력하세요"></textarea>
+						</div>
+					</form>
+				</div>
+				
+				<div class="modal-footer">
+					<button type="button" id="btnModalCancel" class="btn btn-default waves-effect waves-light" data-dismiss="modal">취소</button>
+					<button type="button" id="btnCommentUpdate" class="btn btn-primary waves-effect waves-light" onclick="updateComment()">수정</button>
+					<button type="button" id="btnCommentDelete" class="btn btn-danger waves-effect waves-light">삭제</button>
+				</div>
+			</div>
+		</div>
+	</th:block>
+	
+	
 	<th:block layout:fragment="content">
 		<div class="card-content">
 			<form class="form-horizontal form-view" th:object="${rooke}">
@@ -60,9 +93,9 @@
 				</div>
 			<form class="form-horizontal form-view">
 				<div class="input-group margin-bottom-20">
-				<input type="email" class="form-control" placeholder="댓글을 입력하세요">
+				<input type="text" class="form-control" id="content">
 				<div class="input-group-btn">
-					<button type="button" class="btn waves-effect waves-light">
+					<button type="button" class="btn waves-effect waves-light" th:onclick="insertComment([[${rooke.idx}]])">
 						<i class="fa fa-commenting" aria-hidden="true"></i>
 					</button>
 				</div>
@@ -121,8 +154,87 @@
 			document.getElementById('deleteForm').submit();
 		}
 		
-		
+		//댓글 모달창
+		function openModal(idx,writer,content){
+			$("#commentModal").modal("toggle");
+			
+			document.getElementById("modalWriter").value=writer;
+			document.getElementById("modalContent").value=content;
+			document.getElementById("btnCommentUpdate").setAttribute("onclick","updateComment("+idx+")");
+			document.getElementById("btnCommentDelete").setAttribute("onclick","deleteComment("+idx+")");
+			
+		}
+	
 		//댓글
+		function insertComment(boardIdx){
+			
+			var content=document.getElementById("content");
+			if(isEmpty(content.value)==true){
+				content.setAttribute("placeholder","댓글을 입력하세요");
+				content.focus();
+				return false;
+			}
+			
+			var uri=[[@{/comments}]];
+			var headers={"Content-Type":"application/json","X-HTTP-Method-Override":"POST"};
+			var dtos={"boardIdx":boardIdx,"content":content.value,"writer":"관리자"};
+			
+			$.ajax({
+				url:uri,
+				type:"POST",
+				headers:headers,
+				dataType:"json",
+				data:JSON.stringify(dtos),
+				success:function(response){
+					if(response.result==false){
+						alert("댓글 등록에 실패했습니다");
+						return false;
+					}
+					printCommentList();
+					content.value="";
+				},
+				error:function(xhr,status,error){
+					alert("에러가 발생했습니다");
+					return false;
+				}
+			
+			});
+			
+		}
+		
+		//댓글 수정
+		function updateComment(idx){
+			var writer=document.getElementById("modalWriter");
+			var content=document.getElementById("modalContent");
+			var uri=[[@{/comments/}]]+idx;
+			var headers={"Content-Type":"application/json","X-HTTP-Method-Override":"PATCH"};
+			var params={"idx":idx,"writer":writer.value,"content":content.value};
+		
+			$.ajax({
+				url:uri,
+				type:"PATCH",
+				headers:headers,
+				dataType:"json",
+				data:JSON.stringify(params),
+				success:function(response){
+					if(response.result==false){
+						alert("댓글 수정이 실패했습니다")
+						return false;
+					}
+					
+					printCommentList();
+					$("#commentModal").modal("hide");
+				},
+				error:function(xhr,status,error){
+					alert("에러가 발생했습니다");
+					return false;
+				}
+			});		
+		
+		}		
+		
+		
+		//댓글 리스트
 		$(function(){
 			printCommentList();
 		});
@@ -139,7 +251,7 @@
 								<span class="name">${comment.writer}</span>
 								<span class="desc">${comment.content}</span>
 								<span class="time">${moment(comment.insertTime).format('YYYY-MM-DD HH:mm:ss')}</span>
-								<button type="button" class="btn btn-xs btn-circle"><i class="fa fa-close" aria-hidden="true"></i></button>
+								<button type="button" onclick="openModal(${comment.idx},'${comment.writer}','${comment.content}')" class="btn btn-xs btn-circle"><i class="glyphicon glyphicon-pencil" aria-hidden="true"></i></button>
 							</li>
 						`;
 					});
