--- a/rooke/src/main/resources/templates/board/write.html
+++ b/rooke/src/main/resources/templates/board/write.html
@@ -6,24 +6,25 @@
 	
 	<th:block layout:fragment="content">
 		<div class="card-content">
-			<form class="form-horizontal" th:action="@{/board/register.do}" th:object="${rooke}" method="post" onsubmit="return registerBoard(this)">
+			<form class="form-horizontal" th:action="@{/board/register.do}" th:object="${rooke}" method="post" onsubmit="return registerBoard(this)" enctype="multipart/form-data">
 				<!--/* update의 경우 서버로 전달할 게시글 번호 (PK) */-->
 				<input type="hidden" th:if="*{idx != null and idx > 0}" th:field="*{idx}" />
-
+				<!--  
 				<div class="form-group">
 					<label for="noticeYn" class="col-sm-2 control-label">공지글 설정</label>
 					<div class="col-sm-10" style="margin-top: 10px;">
 						<input type="checkbox" th:value="*{noticeYn}" id="noticeYn" name="noticeYn" th:checked="*{#strings.equals( noticeYn, 'Y' )}" />
 					</div>
 				</div>
-
+				-->
+				<!-- 
 				<div class="form-group">
 					<label for="secretYn" class="col-sm-2 control-label">비밀글 설정</label>
 					<div class="col-sm-10" style="margin-top: 10px;">
 						<input type="checkbox" th:value="*{secretYn}" id="secretYn" name="secretYn" th:checked="*{#strings.equals( secretYn, 'Y' )}" />
 					</div>
 				</div>
-
+				 -->
 				<div class="form-group">
 					<label for="title" class="col-sm-2 control-label">제목</label>
 					<div class="col-sm-10">
@@ -45,7 +46,23 @@
 					</div>
 				</div>
 
-				<div class="btn_wrap text-center">
+				<div data-name="fileDiv" class="form-group filebox bs3-primary">
+					<label for="file_0" class="col-sm-2 control-label">파일</label>
+					<div class="col-sm-10">
+						<input type="text" class="upload-name" value="파일 탐색" readonly="readonly">
+						<label for="file_0" class="control-label">찾아보기</label>
+						<input type="file" name="files" id="file_0" class="upload_hidden" onchange="changeFilename(this)">
+						
+					
+					<button type="button" onclick="addFile()" class="btn btn-bordered btn-xs visible-xs-inline visible-sm-inline visible-md-inline visible-lg-inline">
+						<i class="fa fa-plus" aria-hidden="true"></i>
+					</button>
+					<button type="button" onclick="removeFile(this)" class="btn btn-bordered btn-xs visible-xs-inline visible-sm-inline visible-md-inline visible-lg-inline">
+						<i class="fa fa-minus" aria-hidden="true"></i>
+					</button>
+					</div>
+				</div>
+				<div id="btnDiv" class="btn_wrap text-center">
 					<a th:href="@{/board/list.do}" class="btn btn-default waves-effect waves-light">뒤로가기</a>
 					<button type="submit" class="btn btn-primary waves-effect waves-light">저장하기</button>
 				</div>
@@ -73,6 +90,66 @@
 					return false;
 				}
 			}
+			
+			/*파일 인덱스 처리용 전역 변수*/
+			let fileIdx=0;
+			
+			function addFile(){
+				const fileDivs=$('div[data-name="fileDiv"]');
+				if(fileDivs.length>2){
+					alert('파일업로드는 3개까지만 가능합니다!');
+					return false;
+					
+				}
+				
+				fileIdx++;
+				console.log(fileIdx);
+				
+				const fileHtml=`
+					<div data-name="fileDiv" class="form-group filebox bs3-primary">
+						<label for="file_${fileIdx}" class="col-sm-2 control-label"></label>
+						
+						<div class="col-sm-10">
+							<input type="text" class="upload-name" value="파일 탐색" readonly="readonly">
+							<label for="file_${fileIdx}" class="control-label">찾아보기</label>
+							<input type="file" name="files" id="file_${fileIdx}" class="upload_hidden" onchange="changeFilename(this)">
+							
+					
+							<button type="button" onclick="removeFile(this)" class="btn btn-bordered btn-xs visible-xs-inline visible-sm-inline visible-md-inline visible-lg-inline">
+							<i class="fa fa-minus" aria-hidden="true"></i>
+							</button>
+						</div>
+					</div>
+				`;
+				
+				$('#btnDiv').before(fileHtml);
+			}
+			
+			function removeFile(elem){
+				const prevTag=$(elem).prev().prop('tagName');
+				/*
+				console.log(elem);
+				console.log(prevTag);
+				*/
+				if(prevTag==='BUTTON'){
+					const file=$(elem).prevAll('input[type="file"]');
+					const fileName=$(elem).prevAll('input[type="text"]');
+					file.val('');
+					fileName.val('파일 탐색');
+					return false;
+				}
+				const target=$(elem).parents('div[data-name="fileDiv"]');
+				target.remove();
+			}
+			
+			function changeFilename(file){
+				file=$(file);
+				console.log(file);
+				const filename=file[0].files[0].name;
+				const target=file.prevAll('input');
+				target.val(filename);
+			}
+			
 			
 		</script>
 	</th:block>
