--- a/rooke/src/main/resources/templates/board/view.html
+++ b/rooke/src/main/resources/templates/board/view.html
@@ -74,6 +74,19 @@
 						<p class="form-control" th:text="*{viewCnt}">
 					</div>
 				</div>
+				
+				<div th:if="${not #lists.isEmpty(fileList)}" class="form-group">
+					<label for="inp-type-4" class="col-sm-2 control-label">File</label>
+					<div class="col-sm-10">
+						<div class="form-control file_list">
+							<a th:each="row,status:${fileList}" th:href="@{/board/download.do(idx=${row.idx})}">
+								<i class="fa fa-file-o" aria-hidden="true"></i>
+									[[${row.realName}]]
+								
+							</a>
+						</div>
+					</div>
+				</div>
 			</form>
 			<div class="btn_wrap text-center">
 				<!--  <a th:href="@{/board/list.do}" class="btn btn-default waves-effect waves-light">이전으로</a>-->
